--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,20 @@
     <string name="option_get_place">Get place</string>
     <string name="pick_place">Choose a place</string>
     <string name="nslc_button">NSLC</string>
+    <string name="title_activity_user_account">UserAccountActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_useraccount">useraccount</string>
+    <string name="user_id">"@"Booty Baba</string>
+    <string name="user_name">bleh bl bleh</string>
+    <string name="order_history">Order History</string>
+    <string name="reviews">Reviews</string>
+    <string name="favourites">Favourites</string>
+    <string name="following_value">1</string>
+    <string name="following">FOLLOWING</string>
+    <string name="post_value">2</string>
+    <string name="posts">POSTS</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
