--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="nslc_button">NSLC</string>
     <string name="recommendation_text">Recommendation</string>
     <string name="map">Map</string>
+    <string name="gmail_login">Connect with Gmail</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_info">InfoActivity</string>
