--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string-array name="product_array">
-        <item>Blue Kush</item>
-        <item>Blue dream</item>
-        <item>Sativa</item>
+        <item>ACDC</item>
+        <item>Acapulco Gold</item>
+        <item>Afgoo</item>
+        <item>Grapefruit</item>
+        <item>LSD</item>
+        <item>Lavender</item>
+        <item>Mango Kush</item>
 
     </string-array>
 
