Search Activity Updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,20 @@
         <item>ACDC</item>
         <item>Acapulco Gold</item>
         <item>Afgoo</item>
+        <item>Blue Dream</item>
+        <item>Ghost Train Haze</item>
         <item>Grapefruit</item>
+        <item>Great White Shark</item>
+        <item>Headband</item>
         <item>LSD</item>
         <item>Lavender</item>
         <item>Mango Kush</item>
-
+        <item>Northern Lights</item>
+        <item>Obama Kush</item>
+        <item>Orange Kush</item>
+        <item>Platinum</item>
+        <item>Silver Haze</item>
+        <item>Super Sour Diesel</item>
     </string-array>
 
 </resources>
